--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"      # current default Python on Travis CI
   - "3.7"
-  - "3.8"
-  - "3.9"
 # command to install dependencies
 install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest
+  - unittest_flaskapi.py
 # for codecov
 after_success:
   - bash <(curl -s https://codecov.io/bash)
