--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - unittest_flaskapi.py
+  - python3 unittest_flaskapi.py
 # for codecov
 after_success:
   - bash <(curl -s https://codecov.io/bash)
