--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage
 # command to run tests
 script:
-  - python3 unittest_flaskapi.py
+  - coverage run unittest_flaskapi.py
 # for codecov
 after_success:
   - bash <(curl -s https://codecov.io/bash)
