replaced travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,14 @@
-sudo: required
 language: python
-services:
-- docker
-
+python:
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+  - pip install coverage
+# command to run tests
 script:
-- docker image build -t imjonlam/cps847 .
-
+  - coverage run unittest_flaskapi.py
+# for codecov
 after_success:
-  #log in to docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  #take built images and push to DOcker hub
-  - docker push imjonlam/cps847
-  #test
-
-deploy:
-  provider: elasticbeanstalk
-  region: "us-east-1"
-  app: "cps847"
-  env: "cps847-env"
-  bucket_name: "elasticbeanstalk-us-east-1-862341512431"
-  on:
-    branch: main
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  - bash <(curl -s https://codecov.io/bash)
